write cat articles pt.1

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,11 +1,11 @@
-<!-- FILEPATH: /c:/Users/abdul/Desktop/odin projects/Admin-Dashboard/Admin-Dashboard.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="Admin-Dashboard.css">
+    <link rel="stylesheet" href="dashboard.css">
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -13,9 +13,9 @@
     
          <div class="sidebar">  <!--sidebar -->
               <div class="sidebar-header">
-                Catboard nya~
+                Catboard nya
               </div>
-              <div class="h-divider"></div>~
+              <div class="h-divider"></div>
               <ul class="sidebar-list">
                <li class="sidebar-list-item">
                     <a href="https://github.com/rakuda04/Admin-Dashboard">
@@ -125,19 +125,20 @@
                   </div> 
                <div class="content-box">
                 <img class="image-placeholder" src="./pics of cats/bank of cat.jpg" alt="Bank of Cat" title="Bank of Cat">
-                <h4>Cat runs bank</h4>
-                <p>insert box here</p>
+                <h2>CatBank Launches</h2>
+                <p>In a  twist of events, the financial district has witnessed the launch of the most purr-suasive IPO of the year.Cat Bank has officially listed on the NASDAQ exchange.</p>
+
                 <div class="content-controls">
-                    <img class="controls-btn" src="./svgs/star.svg" alt="star">
-                    <img class="controls-btn" src="./svgs/eye.svg" alt="view">
-                    <img class="controls-btn" src="./svgs/share-android.svg" alt="share">
+                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
+                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
+                     <img class="controls-btn" src="./svgs/share-android.svg" alt="share">
            </div>
               </div>
              
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/terrified cat.jpg" alt="Terrified cat" title="Terrified cat">
-               <h2>cat on weekend</h2>
-               <p>insert box here</p>
+               <h2>Meet NapCat</h2>
+               <p>Meet the newest internet sensation, a kitten whose napping antics have taken social media by storm. Dubbed "NapCat," this adorable furball has captured the hearts of viewers around the world, one sleepy blink at a time.</p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -146,8 +147,8 @@
            </div>
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/party.jpg" alt="Party image" title="Party image">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+               <h2>Happy Birthday to Murrs!</h2>
+               <p>a group of feline friends gathers around to celebrate one of their own—a distinguished white cat donning a pink birthday hat. At the center of this charming assembly is a plate of delectable treats, presumably a feline-friendly version of a birthday cake, complete with a candle to honor the occasion.</p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -155,9 +156,9 @@
        </div>
            </div>
            <div class="content-box">
-            <img class="image-placeholder" src="./pics of cats/scared cat.jpg" alt="Scared cat" title="Scared cat">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+            <img class="image-placeholder" src="./pics of cats/unicat.jpg" alt="Scared cat" title="Scared cat">
+               <h2>Tails of Midnight</h2>
+               <p>Eerie meows piercing the stillness of the night, a stash of catnip surreptitiously sprinkled with paw prints, and a pair of glowing eyes lurking in the obscurity of an unlit corner. These perplexing occurrences were meticulously documented by Mr. Uni, who, after his nightly grooming ritual of self-licking, found himself plunged into a peculiar nocturnal mystery. </p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -166,7 +167,7 @@
            </div>
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/cat bit cat.jpg" alt="Cat biting another cat" title="Cat biting another cat">
-               <h2>insert box here</h2>
+               <h2>The Moment Of Disaster</h2>
                <p>insert box here</p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
@@ -317,17 +318,9 @@
 
 <!-- 
 TODO: 
-sidebar: 
-    -add hover effect
-    -add nya and uni icon
-   
+ fix dahsboard header
 
- navbar:
-    -add icons
-    -add hover effect
-    -add nested grids
-    -add background colors
-    -add stylings
+
 
     content:
      -add icons
