wrote some filler articles

--- a/dashboard.html
+++ b/dashboard.html
@@ -168,7 +168,7 @@
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/cat bit cat.jpg" alt="Cat biting another cat" title="Cat biting another cat">
                <h2>The Moment Of Disaster</h2>
-               <p>insert box here</p>
+               <p>In the hushed twilight of the living room, where whispers of dusk tiptoed through the curtains, the ginger tabby duo, Cheddar and Biscuit. In the misk of the moment Biscuit remembered some unpaid debt and resolved to biting Cheddar, from that day forward Cheddar has gain a new title of 'The Screamer of the Sofa Seas.'  </p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -177,8 +177,8 @@
             </div>
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/bread cat.jpg" alt="Bread cat" title="Bread cat">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+               <h2>Bread Bed Mystery</h2>
+               <p>Mrs. Muffin's kitchen was the site of a pastry enigma: a slice of bread marked with a cat's imprint. The peculiar event captured imaginations far and wide, with some calling it feline approval, others whimsy. All concurred, though—it was a delightful culinary curiosity.</p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -187,8 +187,9 @@
            </div>
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/stalking behind u cat.jpg" alt="Stalking cat" title="Stalking behind you cat">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+               <h2>Tails Of Midnight 2</h2>
+               <p>In the newest 'Tales of Midnight,' the supposed stalker shadowing Uni turned out to be Fluffernutter, a fluffy white cat more curious than cunning. Her wide-eyed gaze was not of a spy, but of a fan, following Uni to study his suave cat ways.</p>
+               
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -197,8 +198,8 @@
             </div>
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/cosplay cats.jpg" alt="Cosplay Cats" title="Cosplay Cats">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+               <h2>The Feline Fanciers</h2>
+               <p>a duo of domestic felines has taken the art of cosplay to new,adorable heights.Oreo cosplaying as a panda,and Mittens  transforming himself into a lion with his majestic mane. These kitties aren't just playing dress-up; they're channeling their inner wild animals. rawr!</p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -207,8 +208,8 @@
            </div>
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/cat old pic.jpg" alt="Cat Old Pic" title="Cat Old Pic">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+               <h2>The Trio of Mirth</h2>
+               <p>Three kittens perch on a barn beam, belting out a meow melody that captures the heart of carefree youth. In unison, they sing, embodying the joy and curiosity of kittenhood. This candid snapshot of their impromptu performance is a charming reminder of the simple, playful moments that bring joy.</p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -217,8 +218,8 @@
            </div>
            <div class="content-box">
                   <img class="image-placeholder" src="./pics of cats/cat goose.jpg" alt="Cat Goose" title="Cat Goose">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+               <h2>A Feline Afloat</h2>
+               <p>A black cat, dubbed Captain Whiskerpaws, sets sail upon a goose in an amusing display of interspecies travel. Onlookers are tickled by the sight of this feline adventurer riding his feathered friend across the pond, a testament to the cat's daring spirit and the goose's unexpected taxi service.</p>
                <div class="content-controls">
                 <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -227,8 +228,8 @@
            </div>
            <div class="content-box">
             <img class="image-placeholder" src="./pics of cats/whack a mole.jpg" alt="Whack a mole" title="Whack a mole">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+               <h2>Pounce Practice</h2>
+               <p>Tabby McPounce hones her reflexes in a lively game of Whack-A-Mole with Mole the Kitten, who peeks from a cardboard box. It's a playful moment of feline mentorship captured in one charming snapshot of anticipation and innocent fun.</p>
                <div class="content-controls">
                     <img class="controls-btn" src="./svgs/star.svg" alt="star">
                     <img class="controls-btn" src="./svgs/eye.svg" alt="view">
@@ -237,8 +238,8 @@
            </div>
            <div class="content-box">
                <img class="image-placeholder" src="./pics of cats/adoption cat.jpg" alt="Adoption cat" title="Adoption cat">
-               <h2>insert box here</h2>
-               <p>insert box here</p>
+               <h2>A Box of Whiskers</h2>
+               <p>A quartet of kittens, nestled in a box, gaze out with wide-eyed wonder, ready for play and new homes. Their tiny faces invite affection and hint at the playful antics to come.</p>
                
                <div class="content-controls">
                     <img class="controls-btn" src="./svgs/star.svg" alt="star">
