Added styling for News

--- a/dashboard.html
+++ b/dashboard.html
@@ -82,8 +82,6 @@
          </div>
             <div class="navbar"> <!--nav -->
                 <ul class="navbar-header-left">
-                    <!-- navbar-ListItem -->
-                    <!-- navbar-header-left -->
                     <li class="navbar-list-item">
                         <span class="navbar-list-item-icon"></span>
                         <span class="navbar-list-item-text">New</span>
@@ -249,16 +247,18 @@
            </div>
           </div>
           <div class="news">
+
                      <div class="Annoucements"> <!--annoucements-->
                             <div class="Annoucements-info-container">
+                              <h3>Annoucements</h3>
                                  <div class="Annoucements-info">
-                                       <h2>Annoucement 1</h2>
-                                       <p>insert annoucement here</p>
+                                       <h2>Opening of new Cat Cafe!</h2>
+                                       <p>Join us for a purr-fect blend of coffee and cuddles with our adorable resident cats, and come try our new Cat-puccino!</p>
                                        <p>read more...</p>
                                  </div>
                                  <div class="Annoucements-info">
-                                   <h2>Annoucement 2</h2>
-                                   <p>insert annoucement here</p>
+                                   <h2>Mewmentum: The Spectacular Cat Cabaret</h2>
+                                   <p>Join us under the spotlight at the Whisker Way Playhouse for an evening of drama, comedy, and catnip-infused intrigue! Located in Meow Meow Auditorium</p>
                                    <p>read more...</p>
                                  </div>
                             </div>
@@ -268,43 +268,41 @@
                                  <h3>Trending</h3>
                             </div>
                             <div class="Trending-info-container">
-                                 <div class="Trending-info-box">
-                                        <div class="Trending-user-icon">
-                                             <span></span>
-                                        </div>
+                                 <div class="Trending-info-box">     
+                                   <img src="./pics of cats/moet.jpg" class="Trending-user-icon" alt="moet the cat">
+                                        
                                         <div class="Trending-info-box-text">
-                                             <h2>Mrbagels</h2>
+                                             <h3>Moet</h3>
                                              <p>he vewy cuwte</p>
                                         </div>
                                  </div>
                                  <div class="h-divider"></div>
                                  <div class="Trending-info-box">
-                                   <div class="Trending-user-icon">
-                                        <span></span>
-                                   </div>
+                                        <img src="./pics of cats/zelda.jpg" alt="Zelda" class="Trending-user-icon">
+                                  
                                    <div class="Trending-info-box-text">
-                                        <h2>Mrbagels</h2>
-                                        <p>he vewy cuwte</p>
+                                        <h3>Zelda</h3>
+                                        <p> am Zelda the cat. Hunter of house flies and keeper of string.</p>
                                    </div>
                             </div>
                             <div class="h-divider"></div>
                             <div class="Trending-info-box">
                               <div class="Trending-user-icon">
-                                   <span></span>
+                                  <img src="./pics of cats/rolf.jpg" alt="Rolf" class="Trending-user-icon">
                               </div>
                               <div class="Trending-info-box-text">
-                                   <h2>Mrbagels</h2>
-                                   <p>he vewy cuwte</p>
+                                   <h3>Rolfat Warwick</h3>
+                                   <p>Working as a campus cat current stationed at <a href="https://twitter.com/RolfatWarwick"> Warwick Uni.</a></p>
                               </div>
                        </div>
                        <div class="h-divider"></div>
                        <div class="Trending-info-box">
                          <div class="Trending-user-icon">
-                              <span></span>
+                             <img src="./pics of cats/stanley.jpg" class="Trending-user-icon">
                          </div>
                          <div class="Trending-info-box-text">
-                              <h2>Mrbagels</h2>
-                              <p>he vewy cuwte</p>
+                              <h3>stanley</h3>
+                              <p>I am an cat who wanders away from my family, often to the local pet shops</p>
                          </div>
                   </div>
                             </div>
@@ -317,17 +315,3 @@
 </html>
 
 
-<!-- 
-TODO: 
- fix dahsboard header
-
-
-
-    content:
-     -add icons
-     -add hover effect
-     -add nested grids
-     -add background colors
-     -add stylings
-
--->
